# platform.core.uifw.libtbm

./: AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac  libtbm.pc.in  project.config
android/: how_to_deploy.txt  libtbm-2.0.0.spec
doc/: ui_tbm_bufmgr_doc.h  ui_tbm_doc.h  ui_tbm_surface_doc.h
drm_slp/: Makefile.am  drm_slp_bufmgr.c  drm_slp_bufmgr.h
packaging/: libtbm.spec
protocol/: wayland-tbm-drm-auth.xml  wayland-tbm-drm.xml
service/: tbm-drm-auth-user.service  tbm-drm-auth.path  tbm-drm-auth.service  tbm-drm-user.path  tbm-drm-user.service  tbm-drm.path  tbm-drm.service
src/: Makefile.am  list.h  tbm_bufmgr.c  tbm_bufmgr.h  tbm_bufmgr_backend.c  tbm_bufmgr_backend.h  tbm_bufmgr_glock.h  tbm_bufmgr_int.h  tbm_bufmgr_tgl.h  tbm_drm_helper.h  tbm_drm_helper_client.c  tbm_drm_helper_server.c  tbm_surface.c  tbm_surface.h  tbm_surface_internal.c  tbm_surface_internal.h  tbm_surface_queue.c  tbm_surface_queue.h  tbm_sync.c  tbm_sync.h  tbm_type.h  tbm_user_data.c  tbm_user_data.h  tbm_wayland.c  tbm_x11.c
src/wayland-drm/: Makefile.am
